[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "*.py",
]

[project]
name = "hnprofiles"
version = "0.1.0"
description = "CLI tool to analyze Hacker News user profiles using AI"
readme = "README.md"
license = "MIT"
authors = [
    {email = "hi@nicksypteras.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "langchain>=0.3.9",
    "langchain-openai>=0.2.11",
    "requests>=2.32.3",
    "tiktoken>=0.8.0",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/Syps/hnprofiles"
Repository = "https://github.com/Syps/hnprofiles"

[project.scripts]
hnprofiles = "main:cli"

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "B", "A", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["S101", "T201", "PLR0913"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"